home/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-home
  labels:
    internal-gateway-access: "true"
