home/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-home
  namespace: ingress-home
spec:
  selector:
    matchLabels:
      app: ingress-home
  replicas: 1
  template:
    metadata:
      labels:
        app: ingress-home
    spec:
      serviceAccountName: ingress-home
      containers:
        - name: ingress-home
          image: ingress-home
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
