home/kubernetes/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: inf-k8s-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: https
      protocol: HTTPS
      hostname: inf-k8s.net
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: inf-k8s-tls
